Updated homepage for liclipse 3.1.0.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.1.0</h3>
+        <ul>
+        	<li>Updated EGit.</li>
+        	<li>Updated PyDev to 5.2.0 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.0.6</h3>
         <ul>
         	<li>Based on <strong>Eclipse 4.6 (final)</strong></li>
