--- a/scripts/download.html
+++ b/scripts/download.html
@@ -26,32 +26,33 @@
         <br/>
         <ul>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/liclipse_3.0.6_win32.x86_64.exe">LiClipse 3.0.6 for Windows (64 bits)</a>
+                <a href="http://update.liclipse.com/standalone/liclipse_3.1.0_win32.x86_64.exe">LiClipse 3.1.0 for Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/liclipse_3.0.6_win32.x86.exe">LiClipse 3.0.6 for Windows (32 bits)</a>
+                <a href="http://update.liclipse.com/standalone/liclipse_3.1.0_win32.x86.exe">LiClipse 3.1.0 for Windows (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/liclipse_3.0.6_macosx.cocoa.x86_64.dmg">LiClipse 3.0.6 for Mac OS (64 bits)</a>
+                <a href="http://update.liclipse.com/standalone/liclipse_3.1.0_macosx.cocoa.x86_64.dmg">LiClipse 3.1.0 for Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/liclipse_3.0.6_linux.gtk.x86_64.tar.gz">LiClipse 3.0.6 for Linux (64 bits)</a>
+                <a href="http://update.liclipse.com/standalone/liclipse_3.1.0_linux.gtk.x86_64.tar.gz">LiClipse 3.1.0 for Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/liclipse_3.0.6_linux.gtk.x86.tar.gz">LiClipse 3.0.6 Linux (32 bits)</a>
+                <a href="http://update.liclipse.com/standalone/liclipse_3.1.0_linux.gtk.x86.tar.gz">LiClipse 3.1.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/UPDATE SITE 3.0.6.zip">LiClipse 3.0.6 Local Update Site</a>
+                <a href="http://update.liclipse.com/standalone/UPDATE SITE 3.1.0.zip">LiClipse 3.1.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
         It's possible to verify the MD5 of the downloaded file in:
-        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%203.0.6/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.0.6 files MD5</a>.
+        <a href="http://update.liclipse.com/standalone/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.1.0 files MD5</a>.
         <br/>
         <br/>
-        Older versions may be downloaded from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>
+        <!-- Old link was: https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E, but it's now unsupported by google drive. -->
+        Older versions may be downloaded from <a href="https://drive.google.com/open?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>
         (install instructions below for each platform).
 
         <br/>
@@ -82,7 +83,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://drive.google.com/open?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -92,7 +93,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://drive.google.com/open?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -141,7 +142,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>.
+        Download the .tar.gz from <a href="https://drive.google.com/open?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -178,7 +179,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>,
+        <a href="https://drive.google.com/open?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
