--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,15 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.2.0</h3>
+        <ul>
+        	<li>Supporting CMake by default.</li>
+        	<li>Properly making filename associations (non-extension based) for TextMate Bundles.</li>
+        	<li>Updated PyDev to 5.3.0 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
+        	<li>Updated EGit.</li>
+        	<li>Updated Eclipse to 4.6.1.</li>
+        </ul>
+        
         <h3>Release Highlights for LiClipse 3.1.0</h3>
         <ul>
         	<li>Updated EGit.</li>
