--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -26,6 +26,7 @@
             <li>C/C++</li>
             <li>CSS</li>
             <li>CoffeScript</li>
+            <li>CMake (new on 3.2.0)</li>
             <li>Dart</li>
             <li>Django Templates</li>
             <li>Go <strong>(new on 2.0)</strong></li>
