--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.2.1</h3>
+        <ul>
+        	<li>Updated PyDev to 5.3.1 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.2.0</h3>
         <ul>
         	<li>Supporting CMake by default.</li>
@@ -96,7 +101,7 @@
         	<li>Updated EGit.</li>
         	<li>Updated Eclipse to 4.6.1.</li>
         </ul>
-        
+
         <h3>Release Highlights for LiClipse 3.1.0</h3>
         <ul>
         	<li>Updated EGit.</li>
