--- a/text/supported_languages.html
+++ b/text/supported_languages.html
@@ -281,6 +281,9 @@ offer outline, better indenting, code-completion, etc. Below is a reference on t
 			<li>compareIncoming</li>
 			<li>compareConflicting</li>
 			<li>compareResolved</li>
+			
+			<li>selectedTabInitialBackground</li>
+			<li>selectedTabActiveInitialBackground</li>
 		</ul>
 	</li>
 	<li><strong>scope</strong>: Dictionary where each key should be the name of the scope being customized. The values are the name of a color mapping to a list with the names
