--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <h3>Release Highlights for LiClipse 3.2.1</h3>
         <ul>
         	<li>Updated PyDev to 5.3.1 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
+        	<li>Updated LiClipse themes to have a different highlight for the default tab (selectedTabInitialBackground, selectedTabActiveInitialBackground in the theme preferences).</li>
+        	<li>Fixed default colors for some themes and fixed heap status color.</li>
         </ul>
 
         <h3>Release Highlights for LiClipse 3.2.0</h3>
