Changed references from sw-brainwy.rhcloud.com to brainwy.com.

--- a/buy.html
+++ b/buy.html
@@ -50,7 +50,7 @@
     <!-- <li><a href="http://???">Get It <strong>Download</strong></a></li> -->
     <li><a href="contact.html">Get in <strong>Contact</strong></a></li>
     <li><a href="http://liclipse.blogspot.com.br/">View <strong>Blog</strong></a></li>
-    <li><a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
+    <li><a href="https://www.brainwy.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
 </ul>
 <ul class="top2">
     <li class="lifull"><a href="download.html">Get it<strong>Download</strong></a></li>
@@ -77,7 +77,7 @@
     	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
     	specified during the checkout process.<br>
     	<br>
-    	To renew an existing license, please access:<br/><a href="https://sw-brainwy.rhcloud.com/renew_liclipse_licence/">https://sw-brainwy.rhcloud.com/renew_liclipse_licence/</a>
+    	To renew an existing license, please access:<br/><a href="https://www.brainwy.com/renew_liclipse_licence/">https://www.brainwy.com/renew_liclipse_licence/</a>
     	<br>
     	<br>
     	To buy a new license, choose one of the options below.
