--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     <!-- <li><a href="http://???">Get It <strong>Download</strong></a></li> -->
     <li><a href="contact.html">Get in <strong>Contact</strong></a></li>
     <li><a href="http://liclipse.blogspot.com.br/">View <strong>Blog</strong></a></li>
-    <li><a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
+    <li><a href="https://www.brainwy.com/tracker/LiClipse/">LiClipse<strong>Tracker</strong></a></li>
 </ul>
 <ul class="top2">
     <li class="lifull"><a href="download.html">Get it<strong>Download</strong></a></li>
@@ -66,7 +66,7 @@
             </header>
             <section>
                 
-    For bug reports or feature requests, please create an entry at the <a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse Tracker</a>.
+    For bug reports or feature requests, please create an entry at the <a href="https://www.brainwy.com/tracker/LiClipse/">LiClipse Tracker</a>.
     <br/>
     <br/>
     For general support questions, please ask at the <a href="http://stackoverflow.com/questions/tagged/liclipse">StackOverflow (with the LiClipse tag)</a>.
