--- a/scripts/buy.html
+++ b/scripts/buy.html
@@ -13,7 +13,7 @@
     	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
     	specified during the checkout process.<br>
     	<br>
-    	To renew an existing license, please access:<br/><a href="https://sw-brainwy.rhcloud.com/renew_liclipse_licence/">https://sw-brainwy.rhcloud.com/renew_liclipse_licence/</a>
+    	To renew an existing license, please access:<br/><a href="https://www.brainwy.com/renew_liclipse_licence/">https://www.brainwy.com/renew_liclipse_licence/</a>
     	<br>
     	<br>
     	To buy a new license, choose one of the options below.
