--- a/scripts/contact.html
+++ b/scripts/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body>
-    For bug reports or feature requests, please create an entry at the <a href="https://sw-brainwy.rhcloud.com/tracker/LiClipse/">LiClipse Tracker</a>.
+    For bug reports or feature requests, please create an entry at the <a href="https://www.brainwy.com/tracker/LiClipse/">LiClipse Tracker</a>.
     <br/>
     <br/>
     For general support questions, please ask at the <a href="http://stackoverflow.com/questions/tagged/liclipse">StackOverflow (with the LiClipse tag)</a>.
