--- a/text/ctags.html
+++ b/text/ctags.html
@@ -75,7 +75,7 @@
 		<center class="white_text" style="font-size:1.6em">
 
 		Help to keep PyDev going forward<br><br>Support it at
-		<a style="text-decoration:underline;color:white;" href="https://sw-brainwy.rhcloud.com">sw-brainwy.rhcloud.com</a>
+		<a style="text-decoration:underline;color:white;" href="https://www.brainwy.com">www.brainwy.com</a>
 
 		</center>
 		<br>
@@ -105,7 +105,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-        <!-- <iframe src="https://sw-brainwy.rhcloud.com/support/pydev-2014/iframe/" width="700px" height="190px" frameborder="0" scrolling="no"></iframe> -->
+        <!-- <iframe src="https://www.brainwy.com/support/pydev-2014/iframe/" width="700px" height="190px" frameborder="0" scrolling="no"></iframe> -->
         </center>
         <br>
         <br>
@@ -315,7 +315,7 @@ The minimum version for it is ctags-5.8.
 </script>
 
         <!-- Help to keep PyDev going forward<br><br>Support it at
-        <a style="text-decoration:underline;color:white;" href="https://sw-brainwy.rhcloud.com">sw-brainwy.rhcloud.com</a> -->
+        <a style="text-decoration:underline;color:white;" href="https://www.brainwy.com">www.brainwy.com</a> -->
         </center>
         <br>
         <br>
