--- a/text/manual.html
+++ b/text/manual.html
@@ -85,7 +85,7 @@
 </script>
 
 
-        <!-- <iframe src="https://sw-brainwy.rhcloud.com/support/pydev-2014/iframe/" width="700px" height="190px" frameborder="0" scrolling="no"></iframe> -->
+        <!-- <iframe src="https://www.brainwy.com/support/pydev-2014/iframe/" width="700px" height="190px" frameborder="0" scrolling="no"></iframe> -->
 		</center>
 		<br>
 		<br>
@@ -276,7 +276,7 @@ Choose the topic you're interested in...<br/>
 </script>
 
         <!-- Help to keep PyDev going forward<br><br>Support it at
-        <a style="text-decoration:underline;color:white;" href="https://sw-brainwy.rhcloud.com">sw-brainwy.rhcloud.com</a> -->
+        <a style="text-decoration:underline;color:white;" href="https://www.brainwy.com">www.brainwy.com</a> -->
         </center>
         <br>
         <br>
