--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.4.0.</li>
+        	<ul>
+        	    <li>Python 3.6 supported.</li>
+        	    <li>Launch with python -m module.name.</li>
+        	    <li>Debugger shows return values.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.2.1</h3>
         <ul>
         	<li>Updated PyDev to 5.3.1 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
