--- a/scripts/download.html
+++ b/scripts/download.html
@@ -26,29 +26,29 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/dk2anz95ld7k8k9/liclipse_3.2.1_win32.x86_64.exe">LiClipse 3.2.1 for Windows (64 bits)</a>
+                <a href="http://www.mediafire.com/file/or73ijqp5s52g46/liclipse_3.3.0_win32.x86_64.exe">LiClipse 3.3.0 for Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/4cjoy6wvmw3t0j6/liclipse_3.2.1_win32.x86.exe">LiClipse 3.2.1 for Windows (32 bits)</a>
+                <a href="http://www.mediafire.com/file/06tri2exby65625/liclipse_3.3.0_win32.x86.exe">LiClipse 3.3.0 for Windows (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/6w3936tze4ptj2l/liclipse_3.2.1_macosx.cocoa.x86_64.dmg">LiClipse 3.2.1 for Mac OS (64 bits)</a>
+                <a href="http://www.mediafire.com/file/n4thtt7j07941m8/liclipse_3.3.0_macosx.cocoa.x86_64.dmg">LiClipse 3.3.0 for Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/dta3tqacal9l2ft/liclipse_3.2.1_linux.gtk.x86_64.tar.gz">LiClipse 3.2.1 for Linux (64 bits)</a>
+                <a href="http://www.mediafire.com/file/mm66vmi0o30s1pt/liclipse_3.3.0_linux.gtk.x86_64.tar.gz">LiClipse 3.3.0 for Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/24muwj71qvbyv2r/liclipse_3.2.1_linux.gtk.x86.tar.gz">LiClipse 3.2.1 Linux (32 bits)</a>
+                <a href="http://www.mediafire.com/file/ikofipjx8on1qyn/liclipse_3.3.0_linux.gtk.x86.tar.gz">LiClipse 3.3.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/iajefflbexj3t3l/UPDATE_SITE_3.2.1.zip">LiClipse 3.2.1 Local Update Site</a>
+                <a href="http://www.mediafire.com/file/13azxnt0763idxi/UPDATE_SITE_3.3.0.zip">LiClipse 3.3.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
         It's possible to verify the MD5 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/m91s9wabzimzvz4/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.2.1 files MD5</a>.
+        <a href="http://www.mediafire.com/file/b0u3qfgg7114z60/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.3.0 files MD5</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -82,7 +82,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/folder/7gtz3bt91hj7h/LiClipse_3.2.1">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/vmkmtvhd1gpmx/LiClipse%203.3.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -92,7 +92,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://www.mediafire.com/folder/7gtz3bt91hj7h/LiClipse_3.2.1">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/vmkmtvhd1gpmx/LiClipse%203.3.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -141,7 +141,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/7gtz3bt91hj7h/LiClipse_3.2.1">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/vmkmtvhd1gpmx/LiClipse%203.3.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -178,7 +178,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/7gtz3bt91hj7h/LiClipse_3.2.1">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/vmkmtvhd1gpmx/LiClipse%203.3.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
