--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,18 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.4.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.5.0.</li>
+        	<ul>
+        	    <li>Many bugfixes (in refactoring, imports handling, code completion debugger and Python 3.6 syntax).</li>
+        	    <li><strong>Ctrl+Shift+Alt+O</strong> can be used to open the last hyperlink in the console that's currently open (it's now possible to jump directly to the error in some exception).</li>
+        	    <li><strong>Ctrl+2,sw</strong> switches the target and value in assign statements (may not work properly if more than one '=' is found in the line).</li>
+        	    <li>Allows adding local imports to the top of the module.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.3.0</h3>
         <ul>
         	<li>Updated PyDev to 5.4.0.</li>
@@ -43,43 +55,6 @@
         	    <li>Debugger shows return values.</li>
         	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.2.1</h3>
-        <ul>
-        	<li>Updated PyDev to 5.3.1 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
-        	<li>Updated LiClipse themes to have a different highlight for the default tab (selectedTabInitialBackground, selectedTabActiveInitialBackground in the theme preferences).</li>
-        	<li>Fixed default colors for some themes and fixed heap status color.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.2.0</h3>
-        <ul>
-        	<li>Supporting CMake by default.</li>
-        	<li>Properly making filename associations (non-extension based) for TextMate Bundles.</li>
-        	<li>Updated PyDev to 5.3.0 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
-        	<li>Updated EGit.</li>
-        	<li>Updated Eclipse to 4.6.1.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.1.0</h3>
-        <ul>
-        	<li>Updated EGit.</li>
-        	<li>Updated PyDev to 5.2.0 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.0.6</h3>
-        <ul>
-        	<li>Based on <strong>Eclipse 4.6 (final)</strong></li>
-        	<li>Updated EGit.</li>
-        	<li>Updated PyDev to 5.1.2 (see <a href="http://www.pydev.org">http://www.pydev.org</a> for details).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.0.3</h3>
-        <ul>
-        	<li>Based on <strong>Eclipse 4.6 RC1</strong></li>
-        	<li>Updated EGit (fixed a critical issue in the Git Staging View).</li>
-        	<li>The LiClipse editor component (<a href="http://www.liclipse.com/text">LiClipseText</a>) is now open source (
-        		view <a href="http://www.liclipse.com/text">http://www.liclipse.com/text</a> for more information).</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
