--- a/history.html
+++ b/history.html
@@ -67,6 +67,18 @@
             <section>
                 
     <h3>Releases history</h3>
+
+        <h3>Release Highlights for LiClipse 3.5.0</h3>
+        <ul>
+            <li>Updated PyDev to 5.6.0.</li>
+            <ul>
+                <li>Faster debugger (only supporting Python 2.6 onwards now).</li>
+                <li>Debugger properly displaying variables when connected to interactive console.</li>
+                <li>super and pytest fixtures properly recognized in the type inferonce engine.</li>
+                <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+            </ul>
+            <li>Fixed issue where filtering results wasn't working properly for LiClipse text searches.</li>
+        </ul>
     
         <h3>Release Highlights for LiClipse 3.4.0</h3>
         <ul>
