--- a/download.html
+++ b/download.html
@@ -80,29 +80,29 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/x66xe12rr87ktfp/liclipse_3.4.0_win32.x86_64.exe">LiClipse 3.4.0 for Windows (64 bits)</a>
+                <a href="http://www.mediafire.com/file/v9ptxxu38773gda/liclipse_3.5.0_win32.x86_64.exe">LiClipse 3.5.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/loa26zdfqcbb1si/liclipse_3.4.0_win32.x86.exe">LiClipse 3.4.0 for Windows (32 bits)</a>
+                <a href="http://www.mediafire.com/file/ymbypd3k2410lwg/liclipse_3.5.0_win32.x86.exe">LiClipse 3.5.0 Windows (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/pw05os9ewtfb35k/liclipse_3.4.0_macosx.cocoa.x86_64.dmg">LiClipse 3.4.0 for Mac OS (64 bits)</a>
+                <a href="http://www.mediafire.com/file/aq66cbkiazokfan/liclipse_3.5.0_macosx.cocoa.x86_64.dmg">LiClipse 3.5.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/t564x49xlfy8s4x/liclipse_3.4.0_linux.gtk.x86_64.tar.gz">LiClipse 3.4.0 for Linux (64 bits)</a>
+                <a href="http://www.mediafire.com/file/3byyydkomk36i58/liclipse_3.5.0_linux.gtk.x86_64.tar.gz">LiClipse 3.5.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/xop287t2dvxgai4/liclipse_3.4.0_linux.gtk.x86.tar.gz">LiClipse 3.4.0 Linux (32 bits)</a>
+                <a href="http://www.mediafire.com/file/wu1awavjeev6hli/liclipse_3.5.0_linux.gtk.x86.tar.gz">LiClipse 3.5.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/8o26jz9vhk27jm0/UPDATE_SITE_3.4.0.zip">LiClipse 3.4.0 Local Update Site</a>
+                <a href="http://www.mediafire.com/file/k9884m9mwhdxqyb/UPDATE_SITE_3.5.0.zip">LiClipse 3.5.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
         It's possible to verify the MD5 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/zk5m6oo447ay73q/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.4.0 files MD5</a>.
+        <a href="http://www.mediafire.com/file/zk5m6oo447ay73q/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.5.0 files MD5</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -136,7 +136,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/folder/c3znccyu221zn/LiClipse_3.4.0">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/g08kiimaelqd3/LiClipse_3.5.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -146,7 +146,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://www.mediafire.com/folder/c3znccyu221zn/LiClipse_3.4.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/g08kiimaelqd3/LiClipse_3.5.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -192,7 +192,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/c3znccyu221zn/LiClipse_3.4.0">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/g08kiimaelqd3/LiClipse_3.5.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -229,7 +229,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/c3znccyu221zn/LiClipse_3.4.0">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/g08kiimaelqd3/LiClipse_3.5.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
@@ -246,9 +246,9 @@
         <br/>
 
 
-        <h3>Requirement: Eclipse 4.3.1</h3>
+        <h3>Requirement: Eclipse 4.6</h3>
 
-        Note that to be installed, LiClipse requires Eclipse 4.3 (Kepler) onwards.
+        Note that to be installed, LiClipse requires Eclipse 4.6 (Neon) onwards.
         <br/>
         <br/>
 
