--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.5.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.6.0.</li>
+        	<ul>
+        	    <li>Faster debugger (only supporting Python 2.6 onwards now).</li>
+        	    <li>Debugger properly displaying variables when connected to interactive console.</li>
+        	    <li>super and pytest fixtures properly recognized in the type inferonce engine.</li>
+        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Fixed issue where filtering results wasn't working properly for LiClipse text searches.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.4.0</h3>
         <ul>
         	<li>Updated PyDev to 5.5.0.</li>
@@ -96,17 +108,6 @@
         	    <li><strong>Ctrl+Shift+Alt+O</strong> can be used to open the last hyperlink in the console that's currently open (it's now possible to jump directly to the error in some exception).</li>
         	    <li><strong>Ctrl+2,sw</strong> switches the target and value in assign statements (may not work properly if more than one '=' is found in the line).</li>
         	    <li>Allows adding local imports to the top of the module.</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.3.0</h3>
-        <ul>
-        	<li>Updated PyDev to 5.4.0.</li>
-        	<ul>
-        	    <li>Python 3.6 supported.</li>
-        	    <li>Launch with python -m module.name.</li>
-        	    <li>Debugger shows return values.</li>
         	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
         </ul>
@@ -120,17 +121,17 @@
         <p>The HTML editor has advanced context-based code-completion</p>
         <p>The HTML, XML and JavaScript editors have code-analysis and code-formatting features</p>
         <h3>Usability improvements for all Eclipse editors</h3>
-        <p>At this point, the major improvement is multi-edition and vertical indent guides, supporting all editors
+        <p>At this point, the major improvements are <strong>multi-edition</strong> and <strong>vertical indent guides</strong>, supporting all editors
             (such as PyDev, JDT, etc).
         </p>
         <p>See: <a href="multi_edition_video.html">Multi-Edition Video</a> for details</p>
-        <p>Besides the multi-edition (which can be triggered in a Ctrl+K search or with the mouse with
-            Ctrl+Alt+Mouse Click), the rectangular edit is also improved to be triggered with
-            Alt+Click (and stopped with escape).
+        <p>Besides the <strong>multi-edition</strong> (which can be triggered in a <strong>Ctrl+K</strong> search or with the mouse with
+            <strong>Ctrl+Alt+Mouse Click</strong>), the <strong>rectangular edi</strong>t is also improved to be triggered with
+            <strong>Alt+Click</strong> (and stopped with escape).
         </p>
         <h3>Bundling of other useful plugins</h3>
         <p>Eclipse has a myriad of useful plugins, and LiClipse bundles some which are considered to be useful
-            regardless of which language you're dealing with: Eclipse Color Theme, StartExplorer, AnyEdit and PyDev
+            regardless of which language you're dealing with: <strong>Eclipse Color Theme</strong>, <strong>StartExplorer</strong>, <strong>AnyEdit</strong> and <strong>PyDev</strong>
             (note that PyDev does not follow the rule of being useful for everyone as the other plugins,
             but LiClipse itself reuses parts of the PyDev codebase).
         </p>
