--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 3.6.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.7.0.</li>
+        	<ul>
+        	    <li>Improved PyLint integration</li>
+        	    <li>Fixed Jython debugger support.</li>
+        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated EGit to 4.7.0.</li>
+        	<li>Updated Eclipse to Neon.3 (4.6.3).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.5.0</h3>
         <ul>
         	<li>Updated PyDev to 5.6.0.</li>
@@ -98,18 +110,6 @@
         	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
         	</ul>
         	<li>Fixed issue where filtering results wasn't working properly for LiClipse text searches.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.4.0</h3>
-        <ul>
-        	<li>Updated PyDev to 5.5.0.</li>
-        	<ul>
-        	    <li>Many bugfixes (in refactoring, imports handling, code completion debugger and Python 3.6 syntax).</li>
-        	    <li><strong>Ctrl+Shift+Alt+O</strong> can be used to open the last hyperlink in the console that's currently open (it's now possible to jump directly to the error in some exception).</li>
-        	    <li><strong>Ctrl+2,sw</strong> switches the target and value in assign statements (may not work properly if more than one '=' is found in the line).</li>
-        	    <li>Allows adding local imports to the top of the module.</li>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
