--- a/license.html
+++ b/license.html
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2017 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p><small>Copyright 2013-2017 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -75,7 +75,7 @@ A multi-user license is to be obtained by an organization so that its employess 
 It can be used by more than one person, but the number of developers using it within a week may not exceed the amount of users to which it was licensed for.
 (i.e.: If licensed for 2 developers, if 2 developers use it on Monday, it cannot be used by anyone else until the next Monday).<br/><br/>
 
-A license is bought for a given version of the software (i.e.: 1.0, 2.0) and must be renewed for use in a new version (but has no time-limit).
+A license is bought for a given version of the software (i.e.: 4.0) and must be renewed for use in a new version (but has no time-limit).
 Eternal licenses (which were available only during the crowdfunding campaign) can be used for any version of the sofware.<br/><br/>
 
 <hr/>
