--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,21 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.0.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.8.0.</li>
+        	<ul>
+        	    <li>Fixed some issues in PyLint integration</li>
+        	    <li>Fixed IronPython debugger support.</li>
+        	    <li>Fixed issue on code-coverage integration.</li>
+        	    <li>Code coverage working with pytest.</li>
+        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated Eclipse to Oxygen (4.7 RC3).</li>
+        	<li>Fixed Mac so that it won't break after updating
+        		(see <a href="download.html#updating_native">Download: Updating Native Install</a> for instructions on how to properly upgrade Mac).</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 3.6.0</h3>
         <ul>
         	<li>Updated PyDev to 5.7.0.</li>
@@ -44,18 +59,6 @@
         	</ul>
         	<li>Updated EGit to 4.7.0.</li>
         	<li>Updated Eclipse to Neon.3 (4.6.3).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.5.0</h3>
-        <ul>
-        	<li>Updated PyDev to 5.6.0.</li>
-        	<ul>
-        	    <li>Faster debugger (only supporting Python 2.6 onwards now).</li>
-        	    <li>Debugger properly displaying variables when connected to interactive console.</li>
-        	    <li>super and pytest fixtures properly recognized in the type inferonce engine.</li>
-        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Fixed issue where filtering results wasn't working properly for LiClipse text searches.</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
