--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
 
 
 
-<p><small>Copyright 2013-2017 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+<p><small>Copyright 2013-2017 - Brainwy Software Ltda.<br/>Theme by <a href="https://github.com/orderedlist/minimal">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -80,29 +80,29 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/4xocnlfxbawjhgo/liclipse_3.6.0_win32.x86_64.exe">LiClipse 3.6.0 Windows (64 bits)</a>
+                <a href="http://www.mediafire.com/file/h2htumel4x8uhec/liclipse_4.0.0_win32.x86_64.exe">LiClipse 4.0.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/ltdiwv5pzia2ow7/liclipse_3.6.0_win32.x86.exe">LiClipse 3.6.0 Windows (32 bits)</a>
+                <a href="http://www.mediafire.com/file/pqvol33am14vbml/liclipse_4.0.0_win32.x86.exe">LiClipse 4.0.0 Windows (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/31508h0na9823ns/liclipse_3.6.0_macosx.cocoa.x86_64.dmg">LiClipse 3.6.0 Mac OS (64 bits)</a>
+                <a href="http://www.mediafire.com/file/s5qczei26kot9z5/liclipse_4.0.0_macosx.cocoa.x86_64.dmg">LiClipse 4.0.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/okiagh1sjmw88x4/liclipse_3.6.0_linux.gtk.x86_64.tar.gz">LiClipse 3.6.0 Linux (64 bits)</a>
+                <a href="http://www.mediafire.com/file/cs38ajdc0zkn1af/liclipse_4.0.0_linux.gtk.x86_64.tar.gz">LiClipse 4.0.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/t7193woj1p5pm5a/liclipse_3.6.0_linux.gtk.x86.tar.gz">LiClipse 3.6.0 Linux (32 bits)</a>
+                <a href="http://www.mediafire.com/file/bg87buannks1tfd/liclipse_4.0.0_linux.gtk.x86.tar.gz">LiClipse 4.0.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/8pdhyvf2xbpktnx/UPDATE_SITE_3.6.0.zip">LiClipse 3.6.0 Local Update Site</a>
+                <a href="http://www.mediafire.com/file/dkaxk156r729490/UPDATE_SITE_4.0.0.zip">LiClipse 4.0.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
-        It's possible to verify the MD5 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/uhh3bpqin7bn7mi/MD5_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 3.6.0 files MD5</a>.
+        It's possible to verify the SHA256 of the downloaded file in:
+        <a href="http://www.mediafire.com/file/bzj59ljafimd9vv/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 4.0.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -136,17 +136,21 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/folder/tztuzhz62bzvs/LiClipse_3.6.0">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/i5r5gz471fvqa/LiClipse_4.0.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
+        <br/>
+        <br/>
+        Note 2: you may have to unblock the file to be executed as pointed in:
+        <a href="https://blogs.msdn.microsoft.com/delay/p/unblockingdownloadedfile/">https://blogs.msdn.microsoft.com/delay/p/unblockingdownloadedfile/</a>
         <br/>
         <br/>
 
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://www.mediafire.com/folder/tztuzhz62bzvs/LiClipse_3.6.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/i5r5gz471fvqa/LiClipse_4.0.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -192,7 +196,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/tztuzhz62bzvs/LiClipse_3.6.0">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/i5r5gz471fvqa/LiClipse_4.0.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -229,7 +233,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/tztuzhz62bzvs/LiClipse_3.6.0">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/i5r5gz471fvqa/LiClipse_4.0.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
@@ -278,16 +282,47 @@
 
         <br/><hr/><h2 id="updating_native">Updating Native Install</h2>
 
-        To update, 2 options are available:
+        To update, 2 options are available (option 1 is recommended):
         <br/>
         <br/>
 
-        1. Download the native installer again and install as a fresh install (but in this case you should install it
-        on a different directory or first uninstall the existing version).
+        <strong>1.</strong> Download the native installer again and install as a fresh install in a different folder, then,
+        to restore other plugins, go to <strong>File > Import > Install > From Existing Installation</strong> and import
+        the plugins you want to keep from your previous install.
+        <br/>
+        <br/>
+        After the install is complete, just make sure you point to the same workspace you used previously so that other
+        configurations are kept.
         <br/>
         <br/>
 
-        2. Update the current installation with an update site that's more recent following the update site instructions.
+        <strong>2.</strong> Update the current installation with an update site that's more recent following the update site instructions.
+        Note that due to a bug, updating Mac OS won't work properly for LiClipse versions lower than 4.0 (so, on <strong>MacOS</strong>,
+        if upgrading an install with version <strong>3.x or before, option 1 must</strong> be used).
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <br/>
         <br/>
 
