Updating homepage for 4.1.0

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,19 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.1.0</h3>
+        <ul>
+        	<li>Updated PyDev to 5.9.0.</li>
+        	<ul>
+        	    <li>Faster debugger on Python 3.6.</li>
+        	    <li>Fixed issue with Lucene integration</li>
+        	    <li>Other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated Eclipse to final Oxygen (4.7) release.</li>
+        	<li>Using the tm4e engine for parsing files based on a TextMate grammar (<a href="https://github.com/eclipse/tm4e">https://github.com/eclipse/tm4e</a>).</li>
+        	<li>Improvements to parse in a thread when file is changed.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.0.0</h3>
         <ul>
         	<li>Updated PyDev to 5.8.0.</li>
@@ -47,18 +60,6 @@
         	<li>Updated Eclipse to Oxygen (4.7 RC3).</li>
         	<li>Fixed Mac so that it won't break after updating
         		(see <a href="download.html#updating_native">Download: Updating Native Install</a> for instructions on how to properly upgrade Mac).</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 3.6.0</h3>
-        <ul>
-        	<li>Updated PyDev to 5.7.0.</li>
-        	<ul>
-        	    <li>Improved PyLint integration</li>
-        	    <li>Fixed Jython debugger support.</li>
-        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Updated EGit to 4.7.0.</li>
-        	<li>Updated Eclipse to Neon.3 (4.6.3).</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
