Updated to LiClipseText 2.0.0

--- a/text/index.html
+++ b/text/index.html
@@ -264,8 +264,16 @@
         </p>
         <h1>Download and install</h1>
         <p>
-            For information on how to download and install LiClipseText, please see the <a href="download.html">Download page</a>. 
+            For information on how to download and install LiClipseText, please see the <a href="download.html">Download page</a>.
         </p>
+        <h1>Releases information</h1>
+    	<h3>Release 2.0.0 (2017-08-15)</h3>
+    	<ul>
+			<li>
+			This release has a major overhaul on the parsing when dealing with TextMate grammars as it now
+			reuses the same engine used in tm4e.
+			</li>
+		</ul>
         <br>
         <br>
         <br>
