Updated index.html for liclipse text update sites

--- a/text/updates/index.html
+++ b/text/updates/index.html
@@ -1,7 +1,7 @@
-LiClipseText update site aggregator.
-
-Bundles the following Eclipse update sites:
-
-<a href="https://dl.bintray.com/fabioz/liclipsetext/1.0.0">https://dl.bintray.com/fabioz/liclipsetext/1.0.0</a>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/1.1.0">https://dl.bintray.com/fabioz/liclipsetext/1.1.0</a>
-<a href="https://dl.bintray.com/fabioz/liclipsetext/2.0.0">https://dl.bintray.com/fabioz/liclipsetext/2.0.0</a>
+LiClipseText update site aggregator.<br/>
+<br/>
+Bundles the following Eclipse update sites:<br/>
+<br/>
+<a href="https://dl.bintray.com/fabioz/liclipsetext/1.0.0">https://dl.bintray.com/fabioz/liclipsetext/1.0.0</a><br/>
+<a href="https://dl.bintray.com/fabioz/liclipsetext/1.1.0">https://dl.bintray.com/fabioz/liclipsetext/1.1.0</a><br/>
+<a href="https://dl.bintray.com/fabioz/liclipsetext/2.0.0">https://dl.bintray.com/fabioz/liclipsetext/2.0.0</a><br/>
