--- a/text/updates/index.html
+++ b/text/updates/index.html
@@ -1,6 +1,6 @@
 LiClipseText update site aggregator.<br/>
 <br/>
-Bundles the following Eclipse update sites:<br/>
+Bundles the following LiClipseText update sites:<br/>
 <br/>
 <a href="https://dl.bintray.com/fabioz/liclipsetext/1.0.0">https://dl.bintray.com/fabioz/liclipsetext/1.0.0</a><br/>
 <a href="https://dl.bintray.com/fabioz/liclipsetext/1.1.0">https://dl.bintray.com/fabioz/liclipsetext/1.1.0</a><br/>
