Updated homepage for LiClipseText 2.1.0

--- a/text/index.html
+++ b/text/index.html
@@ -267,6 +267,22 @@
             For information on how to download and install LiClipseText, please see the <a href="download.html">Download page</a>.
         </p>
         <h1>Releases information</h1>
+    	<h3>Release 2.1.0 (2017-09-19)</h3>
+    	<ul>
+			<li>
+				Fixed issue dealing with unicode chars when parsing.
+			</li>
+			<li>
+				Fix recursion error when loading CMake textmate bundle (#LiClipseText-3).
+			</li>
+			<li>
+				Subword navigation.
+			</li>
+			<li>
+				Fixed code completions which worked with text selection to properly wrap text selection.
+			</li>
+		</ul>
+        <br>
     	<h3>Release 2.0.0 (2017-08-15)</h3>
     	<ul>
 			<li>
