--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,19 @@
     </head>
     <body>
     <h3>Releases history</h3>
+    	<h3>Release Highlights for LiClipse 4.2.0</h3>
+        <ul>
+        	<li>Updated PyDev to 6.0.0.</li>
+        	<ul>
+        	    <li>Manage packages with pip or conda from within PyDev.</li>
+        	    <li>Configure project to use same grammar as interpreter.</li>
+        	    <li>Subword navigation.</li>
+        	    <li>Other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated Eclipse to Oxygen 4.7.1 RC4.</li>
+        	<li>Fix handling unicode when parsing using TextMate grammars.</li>
+        	<li>Fix on templates code-completion with a text selection.</li>
+        </ul>
 
         <h3>Release Highlights for LiClipse 4.1.0</h3>
         <ul>
