--- a/history.html
+++ b/history.html
@@ -67,6 +67,17 @@
             <section>
                 
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 4.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 6.1.0.</li>
+        	<li>Text editor more tolerant to issues in style range.</li>
+        	<li>Integrated macro keyboard recording:</li>
+        	<ul>
+        		<li>Record and playback of Eclipse commands and keypresses in the scope of a text editor.</li>
+        		<li>Also added to Eclipse incubation. See more details at: <a href="https://wiki.eclipse.org/E4/Macros">https://wiki.eclipse.org/E4/Macros</a>.</li>
+        	</ul>
+        </ul>
+
     	<h3>Release Highlights for LiClipse 4.2.0</h3>
         <ul>
         	<li>Updated PyDev to 6.0.0.</li>
