--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.3.0</h3>
+        <ul>
+        	<li>Updated PyDev to 6.1.0.</li>
+        	<ul>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Text editor more tolerant to issues in style range.</li>
+        	<li>Integrated macro keyboard recording:</li>
+        	<ul>
+        		<li>Record and playback of Eclipse commands and keypresses in the scope of a text editor.</li>
+        		<li>Also added to Eclipse incubation. See more details at: <a href="https://wiki.eclipse.org/E4/Macros">https://wiki.eclipse.org/E4/Macros</a>.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.2.0</h3>
         <ul>
         	<li>Updated PyDev to 6.0.0.</li>
@@ -100,35 +114,6 @@
         	<li>Updated Eclipse to Oxygen 4.7.1 RC4.</li>
         	<li>Fix handling unicode when parsing using TextMate grammars.</li>
         	<li>Fix on templates code-completion with a text selection.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.1.1</h3>
-        <ul>
-        	<li>Updated PyDev to 5.9.2.</li>
-        	<ul>
-        	    <li>Faster debugger on Python 3.6.</li>
-        	    <li>Fixed issue with Lucene integration.</li>
-        	    <li>Other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	    <li>It's possible to use isort as the engine for sorting imports.</li>
-        	</ul>
-        	<li>Updated Eclipse to final Oxygen (4.7) release.</li>
-        	<li>Using the tm4e engine for parsing files based on a TextMate grammar (<a href="https://github.com/eclipse/tm4e">https://github.com/eclipse/tm4e</a>).</li>
-        	<li>Improvements to parse in a thread when file is changed.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.0.0</h3>
-        <ul>
-        	<li>Updated PyDev to 5.8.0.</li>
-        	<ul>
-        	    <li>Fixed some issues in PyLint integration</li>
-        	    <li>Fixed IronPython debugger support.</li>
-        	    <li>Fixed issue on code-coverage integration.</li>
-        	    <li>Code coverage working with pytest.</li>
-        	    <li>Many other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Updated Eclipse to Oxygen (4.7 RC3).</li>
-        	<li>Fixed Mac so that it won't break after updating
-        		(see <a href="download.html#updating_native">Download: Updating Native Install</a> for instructions on how to properly upgrade Mac).</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
