--- a/download.html
+++ b/download.html
@@ -80,29 +80,29 @@
         <br/>
         <ul>
             <li>
-                <a href="http://www.mediafire.com/file/9hgdhnus12hz322/liclipse_4.2.0_win32.x86_64.exe">LiClipse 4.2.0 Windows (64 bits)</a>
+                <a href="https://www.mediafire.com/file/jszv364ywj4zmqc/liclipse_4.3.0_win32.x86_64.exe">LiClipse 4.3.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/3v7qexgstfi8i5r/liclipse_4.2.0_win32.x86.exe">LiClipse 4.2.0 Windows (32 bits)</a>
+                <a href="https://www.mediafire.com/file/py4ac68pmdlb56i/liclipse_4.3.0_win32.x86.exe">LiClipse 4.3.0 Windows (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/nlc4mswfza6f8zj/liclipse_4.2.0_macosx.cocoa.x86_64.dmg">LiClipse 4.2.0 Mac OS (64 bits)</a>
+                <a href="https://www.mediafire.com/file/lxd53r5yoq6d5yl/liclipse_4.3.0_macosx.cocoa.x86_64.dmg">LiClipse 4.3.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/gdd8o5kqknr27nd/liclipse_4.2.0_linux.gtk.x86_64.tar.gz">LiClipse 4.2.0 Linux (64 bits)</a>
+                <a href="https://www.mediafire.com/file/m0z48ul89mrbv5q/liclipse_4.3.0_linux.gtk.x86_64.tar.gz">LiClipse 4.3.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/j9zucr36bx771p3/liclipse_4.2.0_linux.gtk.x86.tar.gz">LiClipse 4.2.0 Linux (32 bits)</a>
+                <a href="https://www.mediafire.com/file/83wl3bmb13avtt1/liclipse_4.3.0_linux.gtk.x86.tar.gz">LiClipse 4.3.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="http://www.mediafire.com/file/ucr9cc1st24xim3/UPDATE_SITE_4.2.0.zip">LiClipse 4.2.0 Local Update Site</a>
+                <a href="https://www.mediafire.com/file/mlkgpvrqtlvmv63/UPDATE%20SITE%204.3.0.zip">LiClipse 4.3.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="http://www.mediafire.com/file/zm9poiz8crh8sk8/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 4.2.0 files SHA256</a>.
+        <a href="https://www.mediafire.com/file/uk3xytg34aulqtk/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 4.3.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -136,7 +136,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/folder/4oxfo7yolxmkw/LiClipse_4.2.0">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/1wny54ufjti3h/LiClipse_4.3.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -150,7 +150,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://www.mediafire.com/folder/4oxfo7yolxmkw/LiClipse_4.2.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/1wny54ufjti3h/LiClipse_4.3.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -196,7 +196,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/4oxfo7yolxmkw/LiClipse_4.2.0">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/1wny54ufjti3h/LiClipse_4.3.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -233,7 +233,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/4oxfo7yolxmkw/LiClipse_4.2.0">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/1wny54ufjti3h/LiClipse_4.3.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
