--- a/text/index.html
+++ b/text/index.html
@@ -267,6 +267,10 @@
             For information on how to download and install LiClipseText, please see the <a href="download.html">Download page</a>.
         </p>
         <h1>Releases information</h1>
+    	<h3>Release 2.1.1 (2017-11-05)</h3>
+    	<ul>
+    		<li>Text editor more tolerant to issues in style range.</li>
+    	</ul>
     	<h3>Release 2.1.0 (2017-09-19)</h3>
     	<ul>
 			<li>
