--- a/text/index.html
+++ b/text/index.html
@@ -267,10 +267,19 @@
             For information on how to download and install LiClipseText, please see the <a href="download.html">Download page</a>.
         </p>
         <h1>Releases information</h1>
+
+    	<h3>Release 2.1.2 (2017-11-28)</h3>
+    	<ul>
+    		<li>Fix issue on partitioning when requesting a sub-region.</li>
+    	</ul>
+        <br>
+
     	<h3>Release 2.1.1 (2017-11-05)</h3>
     	<ul>
     		<li>Text editor more tolerant to issues in style range.</li>
     	</ul>
+        <br>
+
     	<h3>Release 2.1.0 (2017-09-19)</h3>
     	<ul>
 			<li>
@@ -287,6 +296,7 @@
 			</li>
 		</ul>
         <br>
+
     	<h3>Release 2.0.0 (2017-08-15)</h3>
     	<ul>
 			<li>
