--- a/text/updates/index.html
+++ b/text/updates/index.html
@@ -7,3 +7,4 @@ Bundles the following LiClipseText update sites:<br/>
 <a href="https://dl.bintray.com/fabioz/liclipsetext/2.0.0">https://dl.bintray.com/fabioz/liclipsetext/2.0.0</a><br/>
 <a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.0">https://dl.bintray.com/fabioz/liclipsetext/2.1.0</a><br/>
 <a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.1">https://dl.bintray.com/fabioz/liclipsetext/2.1.1</a><br/>
+<a href="https://dl.bintray.com/fabioz/liclipsetext/2.1.2">https://dl.bintray.com/fabioz/liclipsetext/2.1.2</a><br/>
