--- a/download.html
+++ b/download.html
@@ -80,29 +80,29 @@
         <br/>
         <ul>
             <li>
-                <a href="https://www.mediafire.com/file/6mim6xyy2lodhe0/liclipse_4.3.1_win32.x86_64.exe">LiClipse 4.3.1 Windows (64 bits)</a>
+                <a href="http://www.mediafire.com/file/smi4urrgkazziqf/liclipse_4.4.0_win32.x86_64.exe">LiClipse 4.4.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/4yiutc6w2feblt2/liclipse_4.3.1_win32.x86.exe">LiClipse 4.3.1 Windows (32 bits)</a>
+                <a href="http://www.mediafire.com/file/odbay98ocot23se/liclipse_4.4.0_win32.x86.exe">LiClipse 4.4.0 Windows (32 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/uo997r0865urtn0/liclipse_4.3.1_macosx.cocoa.x86_64.dmg">LiClipse 4.3.1 Mac OS (64 bits)</a>
+                <a href="http://www.mediafire.com/file/8rdtsqoik412hjf/liclipse_4.4.0_macosx.cocoa.x86_64.dmg">LiClipse 4.4.0 Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/b4c2wmrbvmhwhvj/liclipse_4.3.1_linux.gtk.x86_64.tar.gz">LiClipse 4.3.1 Linux (64 bits)</a>
+                <a href="http://www.mediafire.com/file/qy1r5ahxgaamc81/liclipse_4.4.0_linux.gtk.x86_64.tar.gz">LiClipse 4.4.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/664twc17n266x6c/liclipse_4.3.1_linux.gtk.x86.tar.gz">LiClipse 4.3.1 Linux (32 bits)</a>
+                <a href="http://www.mediafire.com/file/gp1gyvgijlsj89g/liclipse_4.4.0_linux.gtk.x86.tar.gz">LiClipse 4.4.0 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file/67dnpj4z6vmqlu1/UPDATE%20SITE%204.3.1.zip">LiClipse 4.3.1 Local Update Site</a>
+                <a href="http://www.mediafire.com/file/0q4936x764d17q0/UPDATE_SITE_4.4.0.zip">LiClipse 4.4.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="https://www.mediafire.com/file/jtaat9v3m3xt11t/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 4.3.1 files SHA256</a>.
+        <a href="http://www.mediafire.com/file/lvx1oxjocznzy3j/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 4.4.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -136,7 +136,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/folder/i798mo82doei2/LiClipse_4.3.1">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/folder/mt1qpbk83pcgd/LiClipse_4.4.0">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -150,7 +150,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://www.mediafire.com/folder/i798mo82doei2/LiClipse_4.3.1">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://www.mediafire.com/folder/mt1qpbk83pcgd/LiClipse_4.4.0">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -196,7 +196,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/i798mo82doei2/LiClipse_4.3.1">MediaFire</a>.
+        Download the .tar.gz from <a href="https://www.mediafire.com/folder/mt1qpbk83pcgd/LiClipse_4.4.0">MediaFire</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -233,7 +233,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/i798mo82doei2/LiClipse_4.3.1">MediaFire</a>,
+        <a href="https://www.mediafire.com/folder/mt1qpbk83pcgd/LiClipse_4.4.0">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
