--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.4.0</h3>
+        <ul>
+        	<li>Updated PyDev to 6.2.0.</li>
+        	<ul>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated to Eclipse 4.7.2rc3.</li>
+        	<li>Fixed issue on partitioning when requesting a sub-region.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.3.1</h3>
         <ul>
         	<li>Updated PyDev to 6.1.0.</li>
