--- a/scripts/license.html
+++ b/scripts/license.html
@@ -3,11 +3,11 @@
     <head></head>
     <body>
 
-In short terms, the license alows anyone to evaluate LiClipse for 30 days, but it must be bought for continued use.<br/><br/>
+In short terms, the license allows anyone to evaluate LiClipse for 30 days, but it must be bought for continued use.<br/><br/>
 
 A single-user license can be used only by the person to which it's licensed for.<br/> <br/>
 
-A multi-user license is to be obtained by an organization so that its employess can use it.
+A multi-user license is to be obtained by an organization so that its employees can use it.
 It can be used by more than one person, but the number of developers using it within a week may not exceed the amount of users to which it was licensed for.
 (i.e.: If licensed for 2 developers, if 2 developers use it on Monday, it cannot be used by anyone else until the next Monday).<br/><br/>
 
@@ -116,6 +116,6 @@ ENTIRE AGREEMENT.<br/>
 You agree that this Agreement expresses the entire understanding between you and BRAINWY SOFTWARE LTDA-ME, and supersedes all other communications, oral or written,
 relating to the Software.<br/>
 <br/>
-COPYRIGHT 2013-2017 BRAINWY SOFTWARE LTDA-ME<br/>
+COPYRIGHT 2013-2018 BRAINWY SOFTWARE LTDA-ME<br/>
     </body>
 </html>
