--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.5.1</h3>
+        <ul>
+        	<li>Updated PyDev to 6.3.1.</li>
+        	<ul>
+        	    <li>Folders no longer require <strong>__init__</strong> to be considered a package.</li>
+        	    <li>Properly recognize <strong>cx_Oracle.cp36-win_amd64.pyd</strong> as <strong>cx_Oracle</strong> (<strong>#PyDev-885</strong>).</li>
+        	    <li>Handle empty numpy arrays in debugger.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.4.0</h3>
         <ul>
         	<li>Updated PyDev to 6.2.0.</li>
@@ -110,20 +121,6 @@
         		<li>Record and playback of Eclipse commands and keypresses in the scope of a text editor.</li>
         		<li>Also added to Eclipse incubation. See more details at: <a href="https://wiki.eclipse.org/E4/Macros">https://wiki.eclipse.org/E4/Macros</a>.</li>
         	</ul>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.2.0</h3>
-        <ul>
-        	<li>Updated PyDev to 6.0.0.</li>
-        	<ul>
-        	    <li>Manage packages with pip or conda from within PyDev.</li>
-        	    <li>Configure project to use same grammar as interpreter.</li>
-        	    <li>Subword navigation.</li>
-        	    <li>Other improvements. See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Updated Eclipse to Oxygen 4.7.1 RC4.</li>
-        	<li>Fix handling unicode when parsing using TextMate grammars.</li>
-        	<li>Fix on templates code-completion with a text selection.</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
