--- a/history.html
+++ b/history.html
@@ -67,6 +67,42 @@
             <section>
                 
     <h3>Releases history</h3>
+
+        <h3>Release Highlights for LiClipse 4.5.1</h3>
+        <ul>
+        	<li>Updated PyDev to 6.3.1.</li>
+        	<ul>
+        	    <li>Folders no longer require <strong>__init__</strong> to be considered a package.</li>
+        	    <li>Properly recognize <strong>cx_Oracle.cp36-win_amd64.pyd</strong> as <strong>cx_Oracle</strong> (<strong>#PyDev-885</strong>).</li>
+        	    <li>Handle empty numpy arrays in debugger.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 4.4.0</h3>
+        <ul>
+        	<li>Updated PyDev to 6.2.0.</li>
+        	<ul>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated to Eclipse 4.7.2rc3.</li>
+        	<li>Fixed issue on partitioning when requesting a sub-region.</li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 4.3.1</h3>
+        <ul>
+        	<li>Updated PyDev to 6.1.0.</li>
+        	<ul>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Text editor more tolerant to issues in style range.</li>
+        	<li>Integrated macro keyboard recording:</li>
+        	<ul>
+        		<li>Record and playback of Eclipse commands and keypresses in the scope of a text editor.</li>
+        		<li>Also added to Eclipse incubation. See more details at: <a href="https://wiki.eclipse.org/E4/Macros">https://wiki.eclipse.org/E4/Macros</a>.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.3.0</h3>
         <ul>
         	<li>Updated PyDev to 6.1.0.</li>
