Updated homepage to release 4.5.2

--- a/history.html
+++ b/history.html
@@ -68,6 +68,16 @@
                 
     <h3>Releases history</h3>
 
+        <h3>Release Highlights for LiClipse 4.5.2</h3>
+        <ul>
+        	<li>Updated PyDev to 6.3.1.</li>
+        	<ul>
+        	    <li>Improvements in type inference.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated Egit to 4.11</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.5.1</h3>
         <ul>
         	<li>Updated PyDev to 6.3.1.</li>
