--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,16 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 4.5.2</h3>
+        <ul>
+        	<li>Updated PyDev to 6.3.1.</li>
+        	<ul>
+        	    <li>Improvements in type inference.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        	<li>Updated Egit to 4.11</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.5.1</h3>
         <ul>
         	<li>Updated PyDev to 6.3.1.</li>
@@ -53,20 +63,6 @@
         	</ul>
         	<li>Updated to Eclipse 4.7.2rc3.</li>
         	<li>Fixed issue on partitioning when requesting a sub-region.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 4.3.1</h3>
-        <ul>
-        	<li>Updated PyDev to 6.1.0.</li>
-        	<ul>
-        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
-        	</ul>
-        	<li>Text editor more tolerant to issues in style range.</li>
-        	<li>Integrated macro keyboard recording:</li>
-        	<ul>
-        		<li>Record and playback of Eclipse commands and keypresses in the scope of a text editor.</li>
-        		<li>Also added to Eclipse incubation. See more details at: <a href="https://wiki.eclipse.org/E4/Macros">https://wiki.eclipse.org/E4/Macros</a>.</li>
-        	</ul>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
